Avoid deprecated Burp APIs, and internal Sun calls